- using the slider value to set card width. - making the scaling on hover of the cards dynamic - bigger on smaller card size, smaller on bigger size. - setting bigger margin for the container of the cards due to zoom and crop issues.

--- a/src/main-container/card-container/card-container.component.scss
+++ b/src/main-container/card-container/card-container.component.scss
@@ -4,7 +4,8 @@
   display: flex;
   flex-wrap: wrap;
   // justify-content: space-around;
-  margin-left: 30px;
+  margin-left: 40px;
+  margin-right: 5px;
   margin-bottom: 30px;
 }
 
