--- a/src/main-container/carddata-container/carddata-container.component.scss
+++ b/src/main-container/carddata-container/carddata-container.component.scss
@@ -3,8 +3,8 @@
 }
 
 img{
-    max-width: 200px;
-    display:block;
+    max-width: calc(var(--card-width) * 1px);
+    display: block;
     border-radius: 4px;
     // border: 1px black solid;
     // box-shadow: 2px 1px 1px rgba($color: black, $alpha: 0.3);
@@ -12,6 +12,5 @@ img{
 }
 
 img:hover{
-    // transform: scale(1.6);
-    transform: scale(2);
+    transform: scale(calc(1 - (var(--card-width) - 620) / 950));
 }
